--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Froggy</title>
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
     <script src="script.js"></script>
     <style>
